@@ -21,6 +21,7 @@ Emulator:
   NOTE: size would need to be updated in Hatari config files too!
 - SDL GUI:
   - keyboard navigation & shortcuts for options GUI
+  - sort file selector items case-insensitively with folders first
 - Debugger:
   - added "save" subcommand to "history" command
 
